When testing if a user is in a group, check the user's primary group too. This is not an MFC, as the code is no longer present in -current.

PR:		bin/22212
Submitted by:	Cyrille Lefevre <clefevre@citeweb.net>
Approved by:	markm (in principle)